--- a/Results/log.html
+++ b/Results/log.html
@@ -2081,31 +2081,31 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,260],[],[[5,0,6,[7],[0,256,3,8],[[1,9,0,0,0,0,0,0,[0,258,0],[[258,5,10]]],[2,11,0,0,0,0,0,0,[0,259,0],[[259,5,12]]]]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,17071],[],[[5,0,0,[],[0,343,16727,6],[[0,7,0,0,0,0,0,0,[1,343,6691],[[0,8,9,0,10,11,0,0,[1,343,6529],[[359,2,12]]],[0,13,9,0,14,0,0,0,[1,6872,40],[]],[0,15,9,0,16,17,0,0,[1,6912,122],[]]]],[0,18,0,0,0,19,0,0,[1,7035,2057],[[0,20,9,0,21,22,0,0,[1,7036,188],[[7036,2,23]]],[0,20,9,0,21,24,0,0,[1,7240,181],[[7240,2,25]]],[0,26,9,0,27,28,0,0,[1,7422,1656],[[7422,2,29]]],[0,15,9,0,16,30,0,0,[1,9078,14],[]]]],[0,31,32,0,33,34,0,0,[1,9092,2000],[[11092,2,35]]],[0,36,0,0,0,0,0,0,[1,11092,3697],[[0,37,9,0,38,39,0,0,[1,11092,141],[[11092,2,40]]],[0,31,32,0,33,41,0,0,[1,11233,3001],[[14235,2,42]]],[0,43,9,0,44,45,0,0,[1,14236,554],[[14789,2,46]]]]],[0,31,32,0,33,34,0,0,[1,14789,2001],[[16790,2,35]]],[0,47,0,0,0,0,0,0,[0,16790,281],[[0,20,9,0,21,48,0,0,[1,16805,217],[[16805,2,49]]],[0,50,9,0,51,52,53,0,[1,17024,31],[[17055,2,54]]],[0,55,32,0,56,57,0,0,[0,17055,0],[[17055,5,6]]],[0,26,9,0,27,58,0,0,[3,17055,0],[]],[0,20,9,0,21,59,0,0,[3,17055,0],[]],[0,60,9,0,61,62,0,0,[3,17055,0],[]],[0,20,9,0,21,63,0,0,[3,17055,0],[]],[0,60,9,0,61,64,0,0,[3,17055,0],[]],[0,20,9,0,21,65,0,0,[3,17055,0],[]],[0,66,9,0,67,68,0,0,[3,17055,0],[]],[0,20,9,0,21,69,0,0,[3,17055,0],[]],[0,66,9,0,67,70,0,0,[3,17055,0],[]],[0,20,9,0,21,71,0,0,[3,17055,0],[]],[0,66,9,0,67,72,0,0,[3,17055,0],[]],[0,20,9,0,21,73,0,0,[3,17055,0],[]],[0,66,9,0,67,74,0,0,[3,17055,0],[]],[0,20,9,0,21,75,0,0,[3,17055,0],[]],[0,66,9,0,67,76,0,0,[3,17055,0],[]],[0,77,9,0,78,79,0,0,[3,17055,0],[]],[0,66,9,0,67,80,0,0,[3,17071,0],[]],[0,31,32,0,33,81,0,0,[3,17071,0],[]]]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Main","*D:\\Robotframework\\FinalAssignment\\tests\\main.robot","*../tests/main.robot","*<p>This is some basic info about the whole suite\x3c/p>","*TC Create New Customer","*<p>This is some info about test Create new Customer\x3c/p>","*TC02","*Setup failed:\nNo keyword with name 'Common.Open New Browser' found.\n\nAlso teardown failed:\nNo keyword with name 'Common.Exit Browser' found.","*Common.Open New Browser","*No keyword with name 'Common.Open New Browser' found.","*Common.Exit Browser","*No keyword with name 'Common.Exit Browser' found.","*Error in file 'D:\\Robotframework\\FinalAssignment\\tests\\main.robot' on line 4: Resource file 'Pages\\Login.robot' does not exist.","*Error in file 'D:\\Robotframework\\FinalAssignment\\tests\\main.robot' on line 5: Resource file 'Pages\\Common.robot' does not exist.","*Error in file 'D:\\Robotframework\\FinalAssignment\\tests\\main.robot' on line 6: Resource file 'Pages\\AddNewCustomer.robot' does not exist."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Testfail","*D:\\RobotFramework\\FinalAssignment\\tests\\testfail.robot","*../tests/testfail.robot","*<p>This is some info about test Suite\x3c/p>","*TC Create New Customer with fields blank","* != Customer name must not be blank","*Open New Browser","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.demo.guru99.com/v4/index.php\">https://www.demo.guru99.com/v4/index.php\x3c/a>    chrome","*Opening browser 'chrome' to base url '<a href=\"https://www.demo.guru99.com/v4/index.php\">https://www.demo.guru99.com/v4/index.php\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*Guru99 Bank","*Login with valid user and pass","*mngr582243    1234567008@","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name=uid    ${username}","*Typing text 'mngr582243' into text field 'name=uid'.","*name=password    ${password}","*Typing text '1234567008@' into text field 'name=password'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*name=btnLogin","*Clicking element 'name=btnLogin'.","*Manger Id : mngr582243","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2s","*Slept 2 seconds.","*Click On New Customer menu","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//a[normalize-space()='New Customer']","*Clicking link 'xpath=//a[normalize-space()='New Customer']'.","*3s","*Slept 3 seconds.","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*Add New Customer","*Current page contains text 'Add New Customer'.","*Input blank All fields","*name=name    ${EMPTY}","*Typing text '' into text field 'name=name'.","*Get Element Attribute","*<p>Returns the value of <code>attribute\x3c/code> from the element <code>locator\x3c/code>.\x3c/p>","*id=message    innerHTML","*${message_name}","*${message_name} = ","*Should Be Equal","*<p>Fails if the given objects are unequal.\x3c/p>","*${message_name}    Customer name must not be blank","*xpath=//input[@value='f']","*id=dob    ${EMPTY}","*Get Text","*<p>Returns the text value of the element identified by <code>locator\x3c/code>.\x3c/p>","*id=message24    Date Field must not be blank","*name=addr    ${EMPTY}","*id=message3    Address Field must not be blank","*name=city    ${EMPTY}","*Element Should Contain","*<p>Verifies that element <code>locator\x3c/code> contains text <code>expected\x3c/code>.\x3c/p>","*City Field must not be blank","*name=state    ${EMPTY}","*State must not be blank","*name=pinno    ${EMPTY}","*PIN Code must not be blank","*name=telephoneno    ${EMPTY}","*Mobile no must not be blank","*name=emailid    ${EMPTY}","*Email-ID must not be blank","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name=password    ${EMPTY}","*Password must not be blank","*1s"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":1,"label":"TC02","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Main","name":"Main","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:17","fail":1,"id":"s1","label":"Testfail","name":"Testfail","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["errors"] = [[253,4,13],[254,4,14],[255,4,15]];
+window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1723112273295;
+window.output["baseMillis"] = 1723134067582;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 266;
+window.output["generated"] = 17102;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"FAIL","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
