--- a/Results/report.html
+++ b/Results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,260],[],[[5,0,6,[7],[0,256,3,8],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,17071],[],[[5,0,0,[],[0,343,16727,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Main","*D:\\Robotframework\\FinalAssignment\\tests\\main.robot","*../tests/main.robot","*<p>This is some basic info about the whole suite\x3c/p>","*TC Create New Customer","*<p>This is some info about test Create new Customer\x3c/p>","*TC02","*Setup failed:\nNo keyword with name 'Common.Open New Browser' found.\n\nAlso teardown failed:\nNo keyword with name 'Common.Exit Browser' found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Testfail","*D:\\RobotFramework\\FinalAssignment\\tests\\testfail.robot","*../tests/testfail.robot","*<p>This is some info about test Suite\x3c/p>","*TC Create New Customer with fields blank","* != Customer name must not be blank"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":1,"label":"TC02","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Main","name":"Main","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:17","fail":1,"id":"s1","label":"Testfail","name":"Testfail","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1723112273295;
+window.output["baseMillis"] = 1723134067582;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 266;
+window.output["generated"] = 17102;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
